k8s/otushomework-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  otushomework-deployment
  namespace: otus
  labels:
    app:  otushomework
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otushomework
  template:
    metadata:
      labels:
        app:  otushomework
    spec:
      containers:
      - name:  otushomework
        image:  rignatev/otushomework:0.1
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 100m
            memory: 256Mi
        livenessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  8000
          name:  otushomework
      restartPolicy: Always
