k8s/otushomework-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otushomework
  namespace: otus
spec:
  selector:
    app: otushomework
  type: NodePort
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: otushomework
    protocol: TCP
    port: 8000
    targetPort: 8000
