k8s/otushomework-otusapp-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otushomework-otusapp
  namespace: otus
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp/([a-zA-Z]+)/(.*)
        pathType: Prefix
        backend:
          service:
            name: otushomework
            port:
              number: 8000
